Fix lead status and backend updates